--- a/Setting/config.json
+++ b/Setting/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"OTU1NzY4NzA2NjA3MjUxNTI3.Yjme-A.f73YfJDvlgrCJwjc1tqh-JFy1_4",
+    "token":"",
     "prefix":"//",
     "status1":["PLAYING","STREAMING","LISTENING","WATCHING"],
     "status2":["Genshin Impact","League of Legends","Elden Ring","Valorant","Counter Strike Global Offensive","Sword Art Online Fatal Bullet","osu!"],
